Moved images to root folder and deleted the image folder

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <body>
     <div class="container">
       <div class="banner">
-        <img src="/images/burger.jpg" alt="Burger image" />
+        <img src="burger.jpg" alt="Burger image" />
       </div>
       <div class="chefdiv">
-        <img src="/images/logo-head.png" alt="" />
+        <img src="logo-head.png" alt="" />
       </div>
       <div class="menu">
         <h2>Food Menu Pastas</h2>
@@ -65,7 +65,7 @@
             <td>&#8358;4500</td>
           </tr>
         </table>
-        <img src="/images/footer-food.png" alt="" />
+        <img src="footer-food.png" alt="" />
       </div>
       <div class="foot">
         <div class="footcontent">
