Made some adjustments to make it fit to all screen sizes

--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div class="container">
       <div class="banner">
-        <img src="burger.jpg" alt="Burger image" />
       </div>
       <div class="chefdiv">
         <img src="logo-head.png" alt="" />
@@ -74,8 +73,8 @@
             <h2>Food Menu Pastas</h2>
           </div>
           <div class="order_form">
-            <input type="text" placeholder="Enter Fullname" /><br />
-            <input type="number" placeholder="Enter Phone Number" /><br />
+            <input type="text" placeholder="Enter Fullname" />
+            <input type="number" placeholder="Enter Phone Number" />
             <select id="select">
               <option value="">Choose Location</option>
               <option value="">Lagos</option>
@@ -83,8 +82,8 @@
               <option value="">Uyo</option>
               <option value="">Abujy</option>
               <option value="">Port Harcout</option></select
-            ><br />
-            <textarea></textarea><br />
+            >
+            <textarea></textarea>
             <button type="submit" id="submit"><strong>Submit</strong> <i class="fa fa-paper-plane" aria-hidden="true"></i>
             </button>
           </div>
